ajustes de layout

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         body {
             font-family: 'Arial', sans-serif;
             background: #f5f5f5;
-            padding: 15px;
+            padding: 0;
         }
 
         .banner {
-            max-width: 1210px;
+            width: 100%;
             margin: 0 auto;
             background: linear-gradient(135deg, #1b4d1e 0%, #2c5f2d 50%, #97c27c 100%);
             padding: 35px;
-            border-radius: 15px;
+            box-sizing: border-box;
             box-shadow: 0 15px 40px rgba(0,0,0,0.3);
         }
 
@@ -603,28 +603,29 @@
                 </div>
             </div>
 
-             <div class="footer">
-                <div>
-                    <div class="author">Maria Clara De Assis Ferreira</div>
-                    <div class="institution">Discente do Curso de Medicina Veterinária</div>
-                    <div class="institution">Centro Universitário UNA - Belo Horizonte</div>
-                </div>
-                <div style="text-align: right;">
-                    <div class="institution" style="font-weight: 600; color: #2c5f2d;">📧 Contato:</div>
-                    <div class="institution">mariahckara@gmail.com</div>
-                </div>
-            </div>
             <div style="margin-top: 15px; padding: 15px; background: #e3f2fd; border-radius: 8px; border-left: 4px solid #2196F3;">
                 <p style="margin: 0; color: #0d47a1; font-size: 13px;">
 <strong>📚 REFERÊNCIAS BIBLIOGRÁFICAS</strong><br>
 1. MOTTA, T. P. Estudo sobre a ocorrência de fungos e aflatoxina B1 na dieta de bovinos leiteiros em São Paulo. Pesquisa Veterinária Brasileira, 2015.
-<br>2. BOROWSKY , A. M. Avaliação da ocorrência de multi-micotoxinas no leite e na dieta de vacas leiteiras na região Sudeste do Brasil. 2025. Tese (Doutorado) – Escola Superior de Agricultura “Luiz de Queiroz”, Universidade de São Paulo, Piracicaba, 2025.
+<br>2. BOROWSKY , A. M. Avaliação da ocorrência de multi-micotoxinas no leite e na dieta de vacas leiteiras na região Sudeste do Brasil. 2025. Tese (Doutorado) – Escola Superior de Agricultura "Luiz de Queiroz", Universidade de São Paulo, Piracicaba, 2025.
 <br>3. CARNELOSSO, C. R. Micotoxinas em silagem de milho associadas à necrose hepática multifocal em bovinos leiteiros. 2020. Dissertação (Mestrado) – Faculdade de Medicina Veterinária e Zootecnia, Universidade de São Paulo, São Paulo, 2020.
 <br>4. GALLO, A.; GIUBERTI, G.; FRISV AD, J. C.; BERTUZZI, T.; NIELSEN, K. F. Mycotoxin Occurrence in Maize Silage—A Neglected Risk for Bovine Gut Health. Toxins, v. 12, n. 10, p. 1–18, 2020. DOI: 10.3390/toxins12100630.
 <br>5. BATISTA, L. H. C. Efeitos de micotoxinas na dieta de bovinos de corte e uso de adsorvente à base de parede celular de levedura. 2024. Dissertação (Mestrado) – Universidade Federal de Goiás, Goiânia, 2024.
 <br>6. PIRES, R. D. A. Micotoxinas em rações de confinamento e leite bovino: avaliação multirresíduo por LC-MS/MS. 2025. Tese (Doutorado) – Universidade Federal de Lavras, Lavras, 2025.
 <br>7. Kholif, A. E. Carry-Over of Aflatoxin B1 from Feed to Cow Milk — A Review. Comprehensive Reviews in Food Science and Food Safety, 2023. DOI: 10.1111/1541-4337.13285.
 <br>8. Alonso, V . A. et al. A review on mycotoxins and mycotoxicoses in ruminants. Veterinary Pathology, 2024. DOI: 10.1016/j.vetpath.2024.05.011.</p>
+            </div>
+
+                <div class="footer">
+                        <div>
+                        <div class="author">Maria Clara De Assis Ferreira</div>
+                        <div class="institution">Discente do Curso de Medicina Veterinária</div>
+                        <div class="institution">Centro Universitário UNA - Belo Horizonte</div>
+                </div>
+                <div style="text-align: right;">
+                    <div class="institution" style="font-weight: 600; color: #2c5f2d;">📧 Contato:</div>
+                    <div class="institution">mariahckara@gmail.com</div>
+                </div>
             </div>
             </div>
         </div>
